--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "backend-server",
-  "version": "1.0.0",
-  "description": "Servidor backend",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Paula Campos",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.16.4"
-  }
+    "name": "backend-server",
+    "version": "1.0.0",
+    "description": "Servidor backend",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon app.js"
+    },
+    "author": "Paula Campos",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.16.4",
+        "mongoose": "^5.5.3"
+    }
 }
