--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "author": "Paula Campos",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.18.3",
         "express": "^4.16.4",
-        "mongoose": "^5.5.3"
+        "mongoose": "^5.5.3",
+        "mongoose-unique-validator": "^2.0.3"
     }
 }
