--- a/package.json
+++ b/package.json
@@ -1,20 +1,33 @@
 {
-    "name": "backend-server",
-    "version": "1.0.0",
-    "description": "Servidor backend",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon app.js"
-    },
-    "author": "Paula Campos",
-    "license": "ISC",
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "body-parser": "^1.18.3",
-        "express": "^4.16.4",
-        "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.5.3",
-        "mongoose-unique-validator": "^2.0.3"
-    }
+  "name": "backend-server",
+  "version": "1.0.0",
+  "description": "Servidor backend",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
+  },
+  "author": "Paula Campos",
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.5.3",
+    "mongoose-unique-validator": "^2.0.3"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Pauliih/backend-server.git"
+  },
+  "keywords": [
+    "nodejs",
+    "express"
+  ],
+  "bugs": {
+    "url": "https://github.com/Pauliih/backend-server/issues"
+  },
+  "homepage": "https://github.com/Pauliih/backend-server#readme"
 }
