--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "eslint": "^5.16.0",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.4",
     "google-auth-library": "^4.0.0",
